# sim-parts

./: CMakeLists.txt  README.md  particule.xyz
include/: const.hpp  part.hpp  tools.hpp  utils.hpp
src/: main.cpp  part.cpp  tools.cpp  utils.cpp
